kronolith/themes/screen.css
/* ... */
.day:hover {
    text-decoration: none;
    background: #e9e9e9;
}
.week {
    float: left;
    font-size: 90%;
    padding-left: 2px;
}
a.newEvent {
    display: block;
    float: left;
    height: 12px;
    width: 12px;
    padding: 4px 0 0;
    font-size: 50%;
    text-align: center;
    background: #ddd;
    border-right: 1px solid #999;
    border-bottom: 1px solid #999;
}
a.newEvent:hover {
    background: #e9e9e9;
}
a.newEvent img {
    vertical-align: top;
}

.year-event {
    background: #fff760;
}

/* Free/busy */
.kronolithFBLegend {
    font-size: 90%;
    padding-right: 10px;
}
.kronolithFBBusy {
    position: relative;
    background: #f00;
}
.kronolithFBUnknown {
    background: #d4d0c8 url("graphics/unknown-background.png") repeat left top;
}
.kronolithFBFree {
    position: relative;
    background: #28b22b;
    color: #fff;
}
.kronolithAjax .kronolithFBFree {
    position: relative;
}
.kronolithAjax .kronolithFBBusy {
    position: absolute;
}
div.fbgrid {
    background-color: #fff;
    overflow: auto;
    padding: 0 1ex 0 1ex;
}
.fbgrid table {
    width: 100%;
    border-collapse: collapse;
}
.fbgrid table td, .fbgrid table th {
    border: 1px solid #000;
}
.fbgrid table .label {
    border: none;
    padding-right: 1ex;
}

#pageLoading {
    position: absolute;
    text-align: center;
    vertical-align: middle;
    font-size: 10em;
    background: #fff;
    color: #666;
    filter: alpha(opacity=0);
    -moz-opacity: 0.0;
    opacity: 0.0;
}

body.rightPanel #page {
    margin-right: 13.5em;
}
body #pageControlsInner {
    display: none;
}
body #sbarShow, body #sbarHide {
    padding-left: 18px;
    white-space: nowrap;
    font-weight: bold;
}

body #sbarShow {
    display: block;
    background: transparent url("graphics/plus.png") center left no-repeat;
}
body #sbarHide {
    display: none;
    background: transparent url("graphics/minus.png") center left no-repeat;
}

body #sbarClose {
	white-space: nowrap;
	padding-left: 18px;
}

body.rightPanel #pageControlsInner {
    display: block;
}
body.rightPanel #sbarShow {
    display: none;
}
body.rightPanel #sbarHide {
    display: block;
}
body.rightPanel ul {
    list-style-type: none;
}

#pageControls {
    position: absolute;
    top: 52px;
    right: 0;
    background: #eee;
    border: 1px solid #ccc;
    padding: 4px;
    -moz-border-radius-bottomleft: 10px;
    -webkit-border-bottom-left-radius: 10px;
}
#pageControls #calendarSearch {
    background-image: url("graphics/search.png");
    background-repeat: no-repeat;
    background-position: 2px center;
    border: 1px solid #ccc;
    padding: 2px 0 2px 20px;
}
#pageControls h3 {
    font-size: 100%;
    margin-top: 1em;
}
#pageControls h4 {
    font-size: 90%;
    margin-top: .5em;
}

.QuickFinderNoMatch {
    display: none;
}

#externalcalendars .category {
    margin-top: 2px;
    margin-left: 1em;
    font-size: 95%;
    font-weight: normal;
    font-style: italic;
}

/* Tables. */
table#calendar-list {
    width: 99%;
    margin: 0 0 8px 5px;
    border-top: 1px solid #ddd;
    border-left: 1px solid #ddd;
}
table#calendar-list th {
    padding: 3px;
    background: #e9e9e9;
    border-right: 1px solid #ccc;
    text-align: left;
}
table#calendar-list td {
    padding: 3px;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
}

#calendar-list-buttons {
    padding: 1em;
}
#calendar-list-buttons form {
    display: inline;
}
.calendar-info {
    cursor: pointer;
}
.calendar-info-url {
    background-color: #fff;
    color: #000;
    overflow: auto;
    padding: 2px;
    font-size: 90%;
    word-wrap: break-word;
}
.calendar-list-icon {
    width: 1%;
}


/*****************
 * AJAX INTERFACE
 *****************/
html, body {
    height: 100%;
}
body.kronolithAjax {
    overflow: hidden;
}

#kronolithToday {
    font-weight: bold;
}

.kronolithSeparator {
    padding-left: 2px;
    padding-right: 2px;
    color: #808080;
}

/* Logo */
#kronolithLogo {
    display: none;
}

/* Loading spinner */
.kronolithLoading {
    position: absolute;
    left: 0;
}
#kronolithLoadingday, #kronolithLoadingmonth {
    top: 24px;
}
#kronolithLoadingweek {
    top: 2px;
}
#kronolithLoadingtasks, #kronolithLoadingagenda {
    display: inline-block;
    position: relative;
    top: -3px;
    vertical-align: middle;
}
#kronolithLoading, #kronolithFBLoading {
    background: transparent url("graphics/loading.gif") no-repeat center;
    padding: 2px;
    width: 16px;
    height: 16px;
    border: 1px #c0c0c0 solid;
}
#kronolithFBLoading {
    position: absolute;
    top: 65px;
    border: none;
}

/* User data and options */
#kronolithServices {
    float: right;
    margin-top: 10px;
    margin-right: 10px;
    text-align: right;
}
#kronolithNotifications {
    padding: 3px 5px;
    height: 25px;
    line-height: 25px;
}
.kronolithNotifications {
    background-color: #d9d9d9;
    opacity: .3;
    filter: alpha(opacity=30);
}

/* Main area */
#kronolithMain {
    clear: both;
    padding-top: 15px;
    height: 100%;
}

/* Left menu column */
#kronolithMenu {
    position: absolute;
    top: 10px;
    bottom: 10px;
    left: 10px;
    width: 165px;
}
#kronolithMenuCalendars {
    position: absolute;
    top: 265px;
    bottom: 0;
    width: 100%;
    overflow: auto;
    overflow-x: hidden;
    overflow-y: auto;
}
#kronolithMenu h3 {
    position: relative;
    margin-top: 15px;
    margin-bottom: 10px;
    font-size: 100%;
    font-weight: bold;
    border-bottom: 1px #000 dotted;
    cursor: default;
}
#kronolithMenu form {
    padding: 0;
    margin: 15px 0 5px 0;
}
#kronolithSearchForm {
    position: relative;
    top: 15px;
}
#kronolithSearchTerm {
    width: 127px;
    color: #ccc;
}
#kronolithSearchTerm:focus {
    width: 127px;
    color: #000;
}
#kronolithMenu h3#kronolithCalendarsFirst {
    margin-top: 0;
}
#kronolithMenu div#kronolithHolidayCalendars {
    margin-bottom: 0;
}
/* ... */

